--- a/lume_sales/views/assets.xml
+++ b/lume_sales/views/assets.xml
@@ -14,6 +14,7 @@
             <script type="text/javascript" src="lume_sales/static/src/js/product_catalog/model.js"></script>
             <script type="text/javascript" src="lume_sales/static/src/js/product_catalog/view.js"></script>
             <link rel="stylesheet" type="text/scss" href="lume_sales/static/src/scss/product_product_views.scss"/>
+            <link rel="stylesheet" type="text/css" href="lume_sales/static/src/scss/kanban.css"/>
         </xpath>
     </template>
 </odoo>
