--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -33,7 +33,7 @@
             <span class="o_MessagingMenu_icon fa fa-comments" title="comment bubble"></span>
             <field name="message_unread_counter" widget="count_counter"/>
           </xpath>
-          <xpath expr="(/kanban/templates/t/div//div[@class='o_kanban_record_top'])" position="inside">
+          <xpath expr="(/kanban/templates/t/div//div[@class='o_kanban_record_top']/div)" position="after">
             <!-- Replace user avatar for customer "partner" avatar -->
             <img t-att-src="kanban_image('res.partner', 'image_128', record.partner_id.raw_value)" width="64" height="64" style="border-radius: 50%; margin-left: 6px; position: relative; top:auto; right:auto; display: inline-block;" class="o_m2o_avatar"/>
             <img t-if="record.order_type.raw_value == 'store'" src="/lume_sales/static/src/image/leaf-icon-128.png" alt="leaf" width="32" height="32"/>
