--- a/lume_sales/static/src/scss/kanban.scss
+++ b/lume_sales/static/src/scss/kanban.scss
@@ -1,13 +1,13 @@
-.bg-firebrick-full{
+.bg-curb-full{
     background-color: firebrick;
 }
-.bg-goldenrod-full{
+.bg-online-full{
     background-color: goldenrod;
 }
-.bg-mediumseagreen-full{
+.bg-delivery-full{
     background-color: mediumseagreen;
 }
-.bg-steelblue-full{
+.bg-store-full{
     background-color: steelblue;
 }
 
