--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -9,6 +9,7 @@
            <!-- Needed field tag to access the model field later in this view -->
           <xpath expr="/kanban/field" position="after">
             <field name="order_type"/>
+            <field name="customer_type"/>
           </xpath>
           <!-- Reorganize title of task -->
           <xpath expr="//div[@class='o_kanban_record_headings']/*[4]" position="replace">
