[ADD] added button to open processed metrc transfers on the picking itself. - Initial steps for consolidation. - Added field source package labels field on the mterc transfer. - Inventory adjsutment improvements.

--- a/metrc_stock/views/metrc_transfer_view.xml
+++ b/metrc_stock/views/metrc_transfer_view.xml
@@ -138,6 +138,7 @@
                                 <field name="product_category_name"/>
                                 <field name="lab_testing_state"/>
                                 <field name="production_batch_number"/>
+                                <field name="source_package_labels"/>
                                 <field name="is_testing_sample"/>
                             </group>
                             <group>
