--- a/metrc_stock/views/stock_picking_views.xml
+++ b/metrc_stock/views/stock_picking_views.xml
@@ -16,6 +16,12 @@
                         <span>This is an external incoming transfer and transfer for same has been created in Metrc.</span>
                     </div>
                 </header>
+                <div class="oe_button_box" position="inside">
+                    <button name="action_open_metrc_transfer" string="Metrc Transfers" 
+                            type="object" class="oe_stat_button" icon="fa-bars" 
+                            attrs="{'invisible': [('require_metrc_validation', '=', False)]}"
+                            states="done"/>
+                </div>
                 <field name="partner_id" position="after">
                     <field name="partner_license_id"
                                 domain="[('partner_id', 'child_of', partner_id)]"
