--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -39,5 +39,16 @@
           </xpath>
         </field>
       </record>
+      <record id="view_project_task_DL_image_inherit" model="ir.ui.view">
+        <field name="name">project.task.DL_image_tab.inherit</field>
+        <field name="model">project.task</field>
+        <field name="inherit_id" ref="project.view_task_form2"/>
+        <field name="arch" type="xml">
+            <notebook position="inside">
+                <page string="DL/Med ID" name="DL_image">
+                </page>
+            </notebook>
+        </field>
+      </record>
     </data>
 </odoo>
