--- a/lume_sales/static/src/scss/kanban.scss
+++ b/lume_sales/static/src/scss/kanban.scss
@@ -12,22 +12,22 @@
 }
 
 .o_kanban_view .o_kanban_group {
-    @include o-kanban-css-filter(success, theme-color('success'));
-    @include o-kanban-css-filter(warning, theme-color('warning'));
-    @include o-kanban-css-filter(danger, theme-color('danger'));
-    @include o-kanban-css-filter(muted, theme-color('dark'));
+    // @include o-kanban-css-filter(success, theme-color('success'));
+    // @include o-kanban-css-filter(warning, theme-color('warning'));
+    // @include o-kanban-css-filter(danger, theme-color('danger'));
+    // @include o-kanban-css-filter(muted, theme-color('dark'));
 
     @include o-kanban-css-filter(store, steelblue);
     @include o-kanban-css-filter(online, goldenrod);
     @include o-kanban-css-filter(delivery, mediumseagreen);
     @include o-kanban-css-filter(curb, firebrick);
 
-    &.o_kanban_group_show {
-        display: flex;
-        flex-flow: column nowrap;
+    // &.o_kanban_group_show {
+    //     display: flex;
+    //     flex-flow: column nowrap;
 
-        > * {
-            flex: 0 0 auto;
-        }
-    }
+    //     > * {
+    //         flex: 0 0 auto;
+    //     }
+    // }
 }
