--- a/lume_sales/views/views.xml
+++ b/lume_sales/views/views.xml
@@ -13,7 +13,7 @@
         <field name="vat" position="after">
           <field name="is_medical" string="Is Medical"/>
           <field name="customer_type" string="Customer Type"/>
-          <field name="medical_id" string="MMM ID"/>
+          <field name="medical_id" string="MMM ID" widget="formatted_char"/>
           <field name="medical_expiration" string="MM Exp"/>
           <field name="date_of_birth" string="DOB"/>
           <field name="is_over_21" string="21+"/>
