--- a/lume_sales/static/src/scss/kanban.scss
+++ b/lume_sales/static/src/scss/kanban.scss
@@ -31,3 +31,10 @@
     //     }
     // }
 }
+
+.timer-flash{
+    background-color: #DC6965;
+    color: white !important;
+    padding-right: 2px;
+    padding-left: 2px;
+}
