Timer visual update

--- a/lume_sales/static/src/scss/kanban.scss
+++ b/lume_sales/static/src/scss/kanban.scss
@@ -32,8 +32,12 @@
     // }
 }
 
+.timer-normal{
+    color: rgb(35, 202, 13);
+}
+
 .timer-flash{
-    background-color: #DC6965;
+    background-color: firebrick;
     color: white !important;
     padding-right: 2px;
     padding-left: 2px;
