--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -11,16 +11,16 @@
                   </header>
               </xpath>
               <field name="vat" position="after">
-                <field name="is_medical" string="Is Medical"/>
+                <field name="is_medical" string="Is Medical" invisible="1"/>
                 <field name="customer_type" string="Customer Type"/>
                 <field name="medical_id" string="MMM ID" widget="formatted_char"/>
                 <field name="medical_expiration" string="MM Exp"/>
                 <field name="date_of_birth" string="DOB"/>
-                <field name="is_over_21" string="21+"/>
+                <field name="is_over_21" string="21+" invisible="1"/>
                 <field name="is_expired" string="Expired" invisible="1"/>
                 <field name="drivers_license_number" string="Drivers #"/>
                 <field name="drivers_license_expiration" string="DL Expiration"/>
-                <button name="warn" string="Issue Warning" type="object" class="btn btn-primary" />
+                <button name="warn" string="Issue Warning" type="object" class="btn btn-primary oe_edit_only" />
                 <field name="is_banned" invisible="1"/>
                 <field name="warnings" invisible="1"/>
                 <div>
@@ -50,6 +50,18 @@
               <field name="function" position="replace"/>
               <field name="website" position="replace"/>
               <field name="title" position="replace"/>
+              <!-- Replace the tabs -->
+              <xpath expr="//notebook" position="replace">
+                <notebook colspan="4">
+                  <page name="documents_and_images" string="Documents and Images">
+                    <!-- Will probably look something like the original contacts tab -->
+                    <!-- <field name="document_ids"/> -->
+                  </page>
+                  <page name="internal_notes" string="Internal Notes">
+                    <field name="comment" placeholder="Internal note..."/>
+                </page>
+                </notebook>
+              </xpath>
             </field>
           </record>
     </data>
