--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -62,6 +62,14 @@
                 </page>
                 </notebook>
               </xpath>
+              <!-- Replace smart buttons -->
+              <xpath expr="//div[@class='oe_button_box']" position="replace">
+                <div class="oe_button_box" name="button_box">
+                  <button class="oe_stat_button" type="action" name="%(sale.act_res_partner_2_sale_order)d" icon="fa-usd" modifiers="{}" options="{}">
+                    <field string="Order History" name="sale_order_count" widget="statinfo" modifiers="{'readonly':true}" id="sale_order_count"/>
+                  </button>
+                </div>
+              </xpath>
             </field>
           </record>
     </data>
