--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -10,7 +10,7 @@
                       <!-- <button name="%(scan_dl_wizard)d" string="Scan DL" type="action" class="btn-primary"/> -->
                   </header>
               </xpath>
-              <field name="name" position="after">
+              <field name="type" position="after">
                 <field name="pref_name" string="Preferred Name"/>
               </field>
               <field name="vat" position="after">
@@ -71,6 +71,11 @@
                   <button class="oe_stat_button" type="action" name="%(sale.act_res_partner_2_sale_order)d" icon="fa-usd" modifiers="{}" options="{}">
                     <field string="Order History" name="sale_order_count" widget="statinfo" modifiers="{'readonly':true}" id="sale_order_count"/>
                   </button>
+                  <button class="oe_stat_button" type="action" name="%(project_task_action_from_partner)d"
+                        context="{'search_default_partner_id': active_id, 'default_partner_id': active_id}" attrs="{'invisible': [('task_count', '=', 0)]}"
+                        icon="fa-tasks">
+                        <field  string="Tasks" name="task_count" widget="statinfo"/>
+                    </button>
                 </div>
               </xpath>
             </field>
