--- a/metrc/views/metrc_license_view.xml
+++ b/metrc/views/metrc_license_view.xml
@@ -118,6 +118,8 @@
                             </group>
                             <group>
                                 <field name="usage_type"/>
+                                <field name="facility_license_id" options="{'no_create': True}" groups="metrc_base.group_metrc_admin"
+                                       attrs="{'invisible': [('base_type', '!=', 'Patient')]}"/>
                                 <field name="issuer_id" context="{'default_license_vendor': True, 'default_customer': False, 'default_supplier': False}"/>
                                 <field name="metrc_account_id" attrs="{'required': [('base_type', '=', 'Internal')], 'invisible': [('base_type', '!=', 'Internal')]}"
                                             options="{'no_create': true}"/>
@@ -134,6 +136,8 @@
                                     <field name="thc_available" readonly="1"/> Ounce(s)
                                 </div>
                                 <field name="purchase_amount" readonly="1"/>
+                                <button name="refresh_allotments" string="Refresh" type="object"
+                                        attrs="{'invisible': [('base_type', '!=', 'Patient')]}"/>
                             </group>
                         </group>
                     </sheet>
