--- a/lume_sales/views/views.xml
+++ b/lume_sales/views/views.xml
@@ -17,6 +17,7 @@
           <field name="order_type"/>
         </field>
         <field name="name" position="replace"></field>
+        <field name="user_id" position="replace"></field>
       </field>
     </record>
 
