Upload DL image

--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -47,8 +47,8 @@
         <field name="arch" type="xml">
             <!--<notebook position="inside">-->
             <page name="description_page" position="before">
-                <page string="DL/Med ID" name="DL_image">
-
+                <page string="DL/Med ID" name="DL_med_image">
+                    <field name="DL_or_med_image" />
                 </page>
             </page>
             <!--</notebook>-->
