--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -47,9 +47,11 @@
         <field name="arch" type="xml">
             <!--<notebook position="inside">-->
             <page name="description_page" position="before">
-                <page string="DL/Med ID" name="DL_med_image">
-                    <field name="DL_or_med_image" />
-                </page>
+                <group>
+                    <page string="DL/Med ID" name="DL_med_image">
+                        <field name="DL_or_med_image" />
+                    </page>
+                </group>
             </page>
             <!--</notebook>-->
         </field>
