--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -17,7 +17,7 @@
             <field name="blink_threshold"/>
           </xpath>
           <!-- Reorganize title of task -->
-          <field name="partner_id" position="replace">
+          <field name="name" position="replace">
             <t t-if="False"> <!-- TODO Some contition about caregivers -->
               <!-- <field name="caregiver_name"/> -->
             </t>
