--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -17,19 +17,22 @@
             <field name="blink_threshold"/>
           </xpath>
           <!-- Reorganize title of task -->
-          <field name="name" position="replace">
+          <xpath expr="//strong[@class='o_kanban_record_title']" position="replace">
             <t t-if="False"> <!-- TODO Some contition about caregivers -->
-              <!-- <field name="caregiver_name"/> -->
+       <!--       <strong class="o_kanban_record_title" modifiers="{}">-->
+							<!--	<field name="caregiver_name" modifiers="{}"/>-->
+							<!--</strong>-->
             </t>
-          </field>
-          <xpath expr="//div[@class='o_kanban_record_headings']/*[4]" position="replace">
+          </xpath>
+          <xpath expr="//div[@class='o_kanban_record_headings']/br" position="replace"/>
+          <xpath expr="//div[@class='o_kanban_record_headings']/*[3]" position="replace">
             <span style="font-weight: bold;">
                 <field name="partner_id" widget="res_partner_many2one"/>
             </span>
             <strong><field name="monetary_display"/></strong>
           </xpath>
           <!-- Delete the else tag from the if we replaced above -->
-          <xpath expr="//div[@class='o_kanban_record_headings']/*[6]" position="replace">
+          <xpath expr="//div[@class='o_kanban_record_headings']/*[5]" position="replace">
             <!-- Empty -->
           </xpath>
           <xpath expr="/kanban/templates/t/div//div[@class='oe_kanban_content']" position="inside">
