--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -48,8 +48,7 @@
             <notebook position="inside">
             <!--<page name="description_page" position="before">-->
                 <page string="DL/Med ID" name="DL_med_image">
-                    <field name="partner_id" />
-                    <field name="DL_or_med_image" widget="image" />
+                    <field name="DL_or_med_image" widget="image" readonly="1" required="1"/>
                 </page>
             <!--</page>-->
             </notebook>
