--- a/lume_sales/views/views.xml
+++ b/lume_sales/views/views.xml
@@ -176,6 +176,7 @@
       <field name="arch" type="xml">
         <field name="barcode" position="after">
           <field name="is_medical" string="Is Medical Product" />
+          <field name="effect" string="Effect"/>
         </field>
       </field>
     </record>
