--- a/lume_sales/views/views.xml
+++ b/lume_sales/views/views.xml
@@ -14,6 +14,7 @@
         </field>
         <field name="name" position="after">
           <field name="partner_id"/>
+          <field name="fulfillment_type"/>
           <field name="order_type"/>
         </field>
         <field name="name" position="replace"></field>
@@ -54,11 +55,11 @@
         <field name="partner_id" position="after">
           <field name="sales_order" string="Sales Order" attrs="{'invisible':[('sales_order', '=', False)]}"/>
           <field name="dummy_field" invisible="1"/>
-          <field name="order_type"/>
+          <field name="fulfillment_type"/>
           <!-- <field name="message_unread_counter" />
           <field name="message_unread"/>
           <field name="message_channel_ids"/>
-          <field name="order_type"/> -->
+          <field name="fulfillment_type"/> -->
         </field>
       </field>
     </record>
@@ -99,9 +100,9 @@
         <xpath expr="//search/filter" position="before">
           <filter string="Medical Customers" name="medical" domain="[('partner_id.is_medical','=',True)]"/>
           <filter string="Recreational Customers" name="recreational" domain="[('partner_id.is_medical','=',False)]"/>
-          <filter string="Curbside" name="curb" domain="[('order_type','=','delivery')]"/>
-          <filter string="In Store" name="in_store" domain="[('order_type','=','store')]"/>
-          <filter string="Online Order" name="online" domain="[('order_type','=','online')]"/>
+          <filter string="Curbside" name="curb" domain="[('fulfillment_type','=','delivery')]"/>
+          <filter string="In Store" name="in_store" domain="[('fulfillment_type','=','store')]"/>
+          <filter string="Online Order" name="online" domain="[('fulfillment_type','=','online')]"/>
           <separator/>
         </xpath>
       </field>
