--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -36,7 +36,7 @@
               </field>
               <field name="image_1920" position="before">
                 <widget name="web_ribbon" title="Banned" bg_color="bg-danger" attrs="{'invisible': [('is_banned', '=', False)]}"/>
-                <widget name="web_ribbon" title="Licence Expired" bg_color="bg-warning" attrs="{'invisible': ['|',('is_expired_medical', '=', False),('is_expired_dl','=',False)]}"/>
+                <widget name="web_ribbon" title="Licence Expired" bg_color="bg-warning" attrs="{'invisible': [('is_expired_medical', '=', False),('is_expired_dl','=',False)]}"/>
               </field>
               <field name="category_id" position="attributes">
                   <attribute name="string">Customer Groups</attribute>
