[ADD] added metrc location type and metrc location to metrc module. - One can assign metrc location to odoo location. - Can fetch metrc location types and metrc locations. - Can create metrc location. - On MRP metrc location assigned to destination location   will be pass as location on metrc package create.

--- a/metrc_stock/views/metrc_transfer_view.xml
+++ b/metrc_stock/views/metrc_transfer_view.xml
@@ -172,14 +172,12 @@
             </field>
         </record>
 
-
         <menuitem id="menu_action_view_metrc_transfer"
                 action="action_view_metrc_transfer"
                 name="Transfers"
-                parent="metrc_base.submenu_metrc_data"
+                parent="metrc.menu_metrc_inventory_item"
                 sequence="99"
                 groups="metrc_base.group_metrc_manager"/>
-
 
     </data>
 </odoo>
