[ADD] lost consolidation after receiving. - From the processed transfers statbutton user will go to   list of processed metrc transfers. - User will appply the grooup by based on source   packages and production batch number. - User  will select transfers to consolidate and click   'Consolidate lots' from action menu. - User will enter new lots based on the product/lot groups.

--- a/metrc_stock/wizard/merge_lot_wizard_views.xml
+++ b/metrc_stock/wizard/merge_lot_wizard_views.xml
@@ -9,7 +9,8 @@
                     <group>
                         <field name="picking_id" readonly="1" options="{'no_open': True}"/>
                         <field name="warehouse_id" readonly="1" options="{'no_open': True}"/>
-                        <field name="location_id"/>
+                        <field name="location_id" readonly="1"/>
+                        <field name="location_dest_id" readonly="1"/>
                     </group>
                     <notebook>
                         <page name="destination_lots" string="New Metrc Tags">
