[ADD|IMP] addded production Batch Related information on Production Lot. - Copied production batch information from source lot when single/multi batch split. - Added do not adjsut boolean at inventory adjustment level. - Added internal licnse domain on license field on metrc location,

--- a/metrc_stock/views/metrc_location_views.xml
+++ b/metrc_stock/views/metrc_location_views.xml
@@ -39,7 +39,8 @@
                     <group>
                         <group>
                             <field name="name"/>
-                            <field name="facility_license_id"/>
+                            <field name="facility_license_id"
+                                   domain="[('base_type', '=', 'Internal')]"/>
                         </group>
                         <group>
                             <field name="location_type_id"/>
