--- a/metrc_stock/views/stock_views.xml
+++ b/metrc_stock/views/stock_views.xml
@@ -21,9 +21,14 @@
             </xpath>
             <xpath expr="//field[@name='prefill_counted_quantity']" position="after">
                 <field name="warehouse_id" invisible="1"/>
-                <field name="facility_license_id" domain="[('base_type', '=', 'Internal')]" readonly="1" force_save="1" context="{'default_base_type': 'Internal'}"/>
-                <field name="reason_id" domain="[('license_id', '=', facility_license_id)]" options="{'no_create': True}"/>
-                <field name="reason_note"/>
+                <field name="facility_license_id" domain="[('base_type', '=', 'Internal')]" 
+                       readonly="1" force_save="1" context="{'default_base_type': 'Internal'}"/>
+                <field name="do_not_adjust" 
+                       group="metrc_base.group_metrc_admin,stock.group_stock_manager"/>
+                <field name="reason_id" options="{'no_create': True}" 
+                       domain="[('license_id', '=', facility_license_id)]" 
+                       attrs="{'invisible': [('do_not_adjust', '=', True)]}"/>
+                <field name="reason_note" attrs="{'invisible': [('do_not_adjust', '=', True)]}"/>
             </xpath>
         </field>
     </record>
@@ -90,16 +95,31 @@
                 </header>
             </xpath>
             <xpath expr="//div[hasclass('oe_button_box')]" position="after">
-                <widget name="web_ribbon" title="Not Editable" bg_color="bg-danger" attrs="{'invisible': [('name_readonly', '=', False)]}"/>
+                <widget name="web_ribbon" title="Not Editable" bg_color="bg-danger" 
+                        attrs="{'invisible': [('name_readonly', '=', False)]}"/>
             </xpath>
             <xpath expr="//field[@name='product_id']" position="after">
-                <field name="labtest_state" string="Labtesting State" readonly="1" attrs="{'invisible': [('is_metric_product', '=', False)]}" groups="metrc_base.group_metrc_user"/>
-                <field name="testing_state_date" string="Labtesting State Date" readonly="1" attrs="{'invisible': [('is_metric_product', '=', False)]}" groups="metrc_base.group_metrc_user"/>
-                <label for="metrc_qty" attrs="{'invisible': [('is_metric_product', '=', False)]}" groups="metrc_base.group_metrc_user"/>
-                <div class="o_row" attrs="{'invisible': [('is_metric_product', '=', False)]}" groups="metrc_base.group_metrc_user">
+                <field name="labtest_state" string="Labtesting State" readonly="1" 
+                       attrs="{'invisible': [('is_metric_product', '=', False)]}" 
+                       groups="metrc_base.group_metrc_user"/>
+                <field name="testing_state_date" string="Labtesting State Date" 
+                       readonly="1" attrs="{'invisible': [('is_metric_product', '=', False)]}" 
+                       groups="metrc_base.group_metrc_user"/>
+                <field name="is_production_batch" readonly="1"
+                       attrs="{'invisible': [('is_metric_product', '=', False)]}" 
+                       groups="metrc_base.group_metrc_user"/>
+                <field name="batch_number" readonly="1"
+                       attrs="{'invisible': [('is_metric_product', '=', False)]}" 
+                       groups="metrc_base.group_metrc_user"/>
+                <label for="metrc_qty" attrs="{'invisible': [('is_metric_product', '=', False)]}" 
+                       groups="metrc_base.group_metrc_user"/>
+                <div class="o_row" attrs="{'invisible': [('is_metric_product', '=', False)]}" 
+                     groups="metrc_base.group_metrc_user">
                     <field name="metrc_qty" readonly="1" force_save="1"/>
                     <field name="metrc_uom_id" readonly="1"/>
-                    <button name="get_metrc_package_qty" type="object" string="=> Get Item Quantity from Metrc" class="oe_link" groups="metrc_base.group_metrc_manager"/>
+                    <button name="get_metrc_package_qty" type="object" 
+                            string="=> Get Item Quantity from Metrc" class="oe_link" 
+                            groups="metrc_base.group_metrc_manager"/>
                 </div>
             </xpath>
             <field name="ref" position="after">
