--- a/lume_sales/views/views.xml
+++ b/lume_sales/views/views.xml
@@ -98,8 +98,8 @@
       <field name="inherit_id" ref="project.view_task_search_form"/>
       <field name="arch" type="xml">
         <xpath expr="//search/filter" position="before">
-          <filter string="Medical Customers" name="medical" domain="[('partner_id.is_medical','=',True)]"/>
-          <filter string="Recreational Customers" name="recreational" domain="[('partner_id.is_medical','=',False)]"/>
+          <!-- <filter string="Medical Customers" name="medical" domain="[('partner_id.is_medical','=',True)]"/> -->
+          <!-- <filter string="Recreational Customers" name="recreational" domain="[('partner_id.is_medical','=',False)]"/> -->
           <filter string="Curbside" name="curb" domain="[('fulfillment_type','=','delivery')]"/>
           <filter string="In Store" name="in_store" domain="[('fulfillment_type','=','store')]"/>
           <filter string="Online Order" name="online" domain="[('fulfillment_type','=','online')]"/>
