--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -90,7 +90,7 @@
         <field name="category_id" position="before">
           <field name="is_caregiver" string="Caregiver"></field>
           <field name="caregiver_id" attrs="{'invisible':[('is_caregiver','=',True)],'domain':[('is_caregiver','=',True)]}"></field>
-          <field name="caregiver_license" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}"></field>
+          <field name="caregiver_license" string="Caregiver ID#" widget="formatted_char" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}"></field>
           <field name="patient_ids" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}">
             <tree create="0" delete="0" editable="bottom">
               <field name="name"></field>
