--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -16,7 +16,7 @@
         </field>
         <field name="vat" position="after">
           <!-- <field name="is_medical" string="Is Medical" invisible="1" /> -->
-          <field name="customer_type" string="Customer Type" />
+          <!-- <field name="customer_type" string="Customer Type" /> -->
           <field name="medical_id" string="MMM ID" widget="formatted_char" />
           <field name="medical_expiration" string="MM Exp" />
           <field name="date_of_birth" string="DOB" />
