--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -14,7 +14,7 @@
           <xpath expr="/kanban/field" position="after">
             <field name="fulfillment_type"/>
             <field name="order_type"/>
-            <field name="customer_type"/>
+            <field name="fulfillment_type"/>
             <field name="blink_threshold"/>
           </xpath>
           <!-- Reorganize title of task -->
