[ADD] default adjustment reason on warehouse. - No need to fetch static incorrect quantity reason all the time.

--- a/metrc_stock/views/stock_views.xml
+++ b/metrc_stock/views/stock_views.xml
@@ -7,6 +7,9 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_id']" position="after">
                 <field name="license_id" domain="[('base_type', '=', 'Internal')]" context="{'default_base_type': 'Internal'}"/>
+                <field name='default_adjust_reason_id' domain="[('license_id', '=', license_id)]" 
+                       attrs="{'required': [('license_id', '!=', False)],
+                               'invisible': [('license_id', '=', False)]}"/>
             </xpath>
         </field>
     </record>
