--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -18,7 +18,7 @@
                     <field name="order_type" readonly="1"/>
                 </field>
                 <xpath expr="//tree/field[@name='product_id']" position="replace">
-                    <field name="order_type" invisible="!"></field>
+                    <field name="order_type" invisible="1"></field>
                     <field name="product_id" attrs="{'readonly': [('product_updatable', '=', False)],'required': [('display_type', '=', False)],}" options="{'no_open': True}" force_save="1" context="{'partner_id': parent.partner_id,'quantity': product_uom_qty,'pricelist': parent.pricelist_id,'uom':product_uom,'company_id': parent.company_id,'default_lst_price': price_unit,'default_description_sale': name}" domain="[('sale_ok', '=', True), '|', ('company_id', '=', False), ('company_id', '=', company_id),('is_medical','=',order_type == 'medical'),('type','!=','service')]" widget="product_configurator"/>
                 </xpath>
                 <!-- Custom Add Product Button -->
