--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -36,7 +36,8 @@
           </div>
         </field>
         <field name="image_1920" position="before">
-          <widget name="web_ribbon" title="Licence Expired" bg_color="bg-warning" attrs="{'invisible': [('is_expired_medical', '=', False),('is_expired_dl','=',False)]}" />
+          <widget name="web_ribbon" title="Medical Licence Expired" bg_color="bg-warning" attrs="{'invisible': [('is_expired_medical', '=', False)]}" />
+          <widget name="web_ribbon" title="Drivers Licence Expired" bg_color="bg-warning" attrs="{'invisible': [('is_expired_dl','=',False)]}" />
           <widget name="web_ribbon" title="Banned" bg_color="bg-danger" attrs="{'invisible': [('is_banned', '=', False)]}" />
         </field>
         <field name="category_id" position="attributes">
@@ -56,6 +57,7 @@
         <field name="function" position="replace" />
         <field name="website" position="replace" />
         <field name="title" position="replace" />
+        <field name="parent_id" position="replace" />
         <!-- Replace the tabs -->
         <xpath expr="//notebook" position="replace">
           <notebook colspan="4">
@@ -91,7 +93,7 @@
         <field name="category_id" position="before">
           <field name="is_caregiver" string="Caregiver"></field>
           <field name="caregiver_id" attrs="{'invisible':[('is_caregiver','=',True)],'domain':[('is_caregiver','=',True)]}"></field>
-          <field name="caregiver_license" string="Caregiver ID#" widget="formatted_char" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}"></field>
+          <field name="caregiver_license" string="Caregiver Medical ID" widget="formatted_char" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}"></field>
           <field name="patient_ids" attrs="{'invisible':[('is_caregiver','=',False)],'required':[('is_caregiver','=',True)]}">
             <tree create="0" delete="0" editable="bottom">
               <field name="name"></field>
