--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -57,7 +57,9 @@
         <field name="function" position="replace" />
         <field name="website" position="replace" />
         <field name="title" position="replace" />
-        <field name="parent_id" position="replace" />
+        <field name="parent_id" position="attributes">
+          <attribute name="invisible">1</attribute>
+        </field>
         <!-- Replace the tabs -->
         <xpath expr="//notebook" position="replace">
           <notebook colspan="4">
