--- a/metrc/views/metrc_license_view.xml
+++ b/metrc/views/metrc_license_view.xml
@@ -15,6 +15,23 @@
                 </tree>
             </field>
         </record>
+        <record id="view_metrc_patient_license_tree" model="ir.ui.view">
+            <field name="name">metrc.license.tree</field>
+            <field name="model">metrc.license</field>
+            <field name="arch" type="xml">
+                <tree string="Patient Licenses" decoration-danger="expire_date == False or  expire_date &lt; current_date" decoration-success="expire_date &gt;= current_date" decoration-bf="expire_date &gt;= current_date">
+                    <field name="name"/>
+                    <field name="issue_date"/>
+                    <field name="expire_date"/>
+                    <field name="active"/>
+                    <field name="facility_license_id"/>
+                    <field name="flower_available"/>
+                    <field name="thc_available"/>
+                    <field name="purchase_amount"/>
+                    <button name="refresh_allotments" icon="fa-refresh" type="object"/>
+                </tree>
+            </field>
+        </record>
 
         <record id="view_metrc_license_kanban" model="ir.ui.view">
             <field name="name">metrc.license.kanban</field>
@@ -115,6 +132,8 @@
                                 <field name="partner_id" force_save="1" attrs="{'readonly': [('base_type', '=', 'Internal')], 'required': [('base_type', '=', 'External')]}"/>
                                 <field name="permit_type" attrs="{'required': [('base_type', '=', 'Internal')],
                                                                   'invisible': [('base_type', '=', 'Patient')]}"/>
+                                <field name="sell_to_patients" readonly="1"
+                                       attrs="{'invisible': [('base_type', '!=', 'Internal')]}"/>
                             </group>
                             <group>
                                 <field name="usage_type"/>
@@ -209,6 +228,8 @@
             <field name="name">Patient Licenses</field>
             <field name="res_model">metrc.license</field>
             <field name="view_mode">kanban,tree,form</field>
+            <field name="view_ids" eval="[(5, 0, 0),
+                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_metrc_patient_license_tree')})]"/>
             <field name="domain">[('base_type', '=', 'Patient')]</field>
             <field name="context">{'default_base_type': 'Patient'}</field>
             <field name="search_view_id" ref="metrc.view_metrc_license_search"/>
